<resources>
    <string name="app_name">몽실몽실</string>

    <string name="tutorial_content">튜토리얼 내용</string>
    <string name="my_post">내 글 보기</string>
    <string name="setting_title">환경설정</string>
    <string name="signed_mongsil">가입된 몽실</string>

    <string name="name">닉네임</string>
    <string name="location">지역</string>
    <string name="locaiton_en">location</string>
    <string name="skip">S K I P</string>

    <string name="post_date">Today</string>

    <string name="edit">편집</string>

    <string name="profile_info">기본정보</string>
    <string name="profile_info_manage">정보관리</string>
    <string name="profile_signout">계정 삭제하기</string>

    <string name="done">완료</string>
    <string name="signup_done">완 료</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <string name="close">닫기</string>
    <string name="close_x">X</string>

    <!-- 슬라이딩 메뉴 -->
    <string name="make_mongsil">몽실만들기</string>
    <string name="invite_friend">친구초대하기</string>

    <!-- 툴바 -->
    <string name="alarm">알림</string>
    <string name="alarm_remove">지우기</string>
    <string name="setting">설정</string>

    <!-- 다이어로그 -->
    <string name="dialog">다이어로그</string>
    <string name="capture">직접 촬영</string>
    <string name="select_gallery">앨범사진 선택</string>
    <string name="post_modify">글 수정</string>
    <string name="post_remove">글 삭제</string>

    <string name="select_none">그룹 명 또는 테마를 선택해주세요</string>
    <string name="select_question">친구들을 모두 초대했나요?\n아직 초대하지 않은 친구가 있다면\n초대해주세요.</string>
    <string name="post_remove_question">정말로 삭제하실거에요?</string>
    <string name="post_remove_done">삭제되었습니다!</string>
    <string name="next">다음</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="long_date">2016.07.11</string>
    <string name="time">AM 07:00</string>
    <string name="reply_count">0</string>
    <string name="share">공유하기</string>
    <string name="none_reply">첫 댓글을 남겨주세요.</string>
    <string name="comment">몽실몽실한 한마디를 남겨보세요.</string>
    <string name="comment_send">보내기</string>
    <string name="comment_content">댓글ㅇㅇㅇㅇㅇㅇ</string>
    <string name="save">저장</string>
    <string name="posting">몽실몽실 적어봐요</string>
    <string name="empty_search">원하는 지역을 검색해주세요</string>
    <string name="image_content_description">Image</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="tutorial_one_title">오늘의 날씨는</string>
    <string name="tutorial_two_title">어느 장소든</string>
    <string name="tutorial_three_title">실시간으로</string>
    <string name="tutorial_one_explain">포스트로 내가 사는 동네의\n실시간 날씨를 알아보아요</string>
    <string name="tutorial_two_explain">다른 동네의 날씨가 궁금하면\n검색해보아요</string>
    <string name="tutorial_three_explain">포스트를 작성하여 다른 사람들의\n실시간 기상캐스터가 되어보아요</string>
    <string name="search_location_mark_header">즐겨찾기</string>
    <string name="search_location_content_header">검색내역</string>
    <string name="push_setting_title">푸시 알림 설정</string>
    <string name="push_setting">댓글알림</string>
    <string name="normal_setting">일반</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="alarm_content"><b>끼미니</b>님이 게시물에 댓글을 달았습니다</string>
    <string name="alarm_time">오전 12:50</string>
    <string name="map">현재날씨</string>
    <string name="incheon">인천</string>
    <string name="seoul">서울</string>
    <string name="gangwon">강원</string>
    <string name="chungju">충주</string>
    <string name="daejeon">대전</string>
    <string name="daegu">대구</string>
    <string name="gwangju">광주</string>
    <string name="junju">전주</string>
    <string name="ulsan">울산</string>
    <string name="busan">부산</string>
    <string name="jeju">제주</string>
    <string name="save_gallery_setting">카메라롤에 사진 저장</string>
    <string name="program_info_setting">프로그램 정보</string>
    <string name="gps_setting">위치 정보 사용</string>
    <string name="name_fail">이름을 입력해주세요</string>
    <string name="location_fail">지역을 선택해주세요</string>
    <string name="save_post">작성한 글을 저장하시겠어요?</string>
    <string name="post_remove_fail">삭제에 실패했어요!</string>
    <string name="save_edit_profile_done">저장 완료됐어요!</string>
    <string name="select_remove">기본 이미지</string>
    <string name="account_leave">계정을 삭제하시겠어요?</string>
    <string name="save_edit_profile_fail">저장에 실패했어요!</string>
    <string name="save_modify_profile">수정한 글을 저장하시겠어요?</string>
    <string name="signup_fail">가입에 실패했어요!</string>
    <string name="login_fail">서버와 연결이 되지 않아요!\n잠시 후에 다시 연결해주세요!</string>
    <string name="connection_fail">네트워크 연결에 실패했어요!</string>
    <string name="none_save_post">글 내용을 적어주세요!</string>
    <string name="none_user_info">선택하신 유저의 정보가 존재하지 않아요!</string>
    <string name="Apache_license">Apache license 2.0</string>
    <string name="MIT_license">MIT license</string>
    <string name="gps_setting_request">GPS 사용을 권장해요!\nGPS를 키실래요?</string>
    <string name="google_api_connection_fail">위치 선정 네트워크 연결에 실패했어요!</string>
    <string name="reply_remove_question">댓글을 삭제하시겠어요?</string>
    <string name="reply_modify">댓글 수정</string>
    <string name="reply_remove">댓글 삭제</string>
    <string name="img_filter_original">원본</string>
    <string name="none_share_permission">공유하시려면\\n퍼미션이 필요합니다!</string>
    <string name="select_location">지역을 선택해주세요</string>
    <string name="none_save_post_cause_location">지역을 선택해주세요!</string>
    <string name="sk_weather_provide">날씨 - SK 플래닛 제공</string>
    <string name="program_info_text">몽실몽실</string>
    <string name="program_info_version">버전 1.0</string>
    <string name="program_info_team">김민희, 한상우, 지상준</string>
    <string name="program_info_email">개발자 문의 : tkddn204@gmail.com</string>
    <string name="signup_fail_overlap_nickname">이미 존재하는 닉네임이에요!</string>
    <string name="save_reply_fail">댓글 보내기를 실패했어요!</string>
    <string name="none_list">비어있어요!</string>
    <string name="wait_message">저장 중이니 잠시만 기다려주세요!</string>
    <string name="connection_fail_message">서버와 연결에 실패했어요.\n잠시만 기다려주세요!</string>
    <string name="none_my_post">글을 작성하여 나의 이야기를 만들어보세요</string>
    <string name="network_connection_fail">네트워크에 연결되지 않았어요.\n연결 후 다시 시도해주세요!</string>
    <string name="network_connection_mobile">3G/LTE를 사용하시네요!\nWifi 연결을 권장해요!</string>
    <string name="none_main_post">글을 작성해보세요</string>
    <string name="none_my_reply">아직 댓글을 단  흔적이 없어요!</string>
    <string name="none_weather">알수없음</string>
    <string name="sorry_to_user">날씨 쿼리 제한으로 오늘은\n날씨를 보여드릴 수 없어요!\n죄송합니다 ㅠㅠ</string>
    <string name="post_warning">잠깐! 이미지 등록하실 때\n세로가 긴 이미지를\n사용하시길 권장해요!</string>
    <string name="delete_user">계정이 삭제되었어요!\n다시 돌아올 그날을 기다릴게요!</string>
</resources>
