<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.co.tacademy.mongsil.mongsil.EditProfileFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/dark_transparent_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size">
        <TextView
            android:id="@+id/toolbar_cancel"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/edit_profile"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/toolbar_done"
            android:text="@string/done"
            android:textSize="16dp"
            android:textColor="@android:color/white"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <!-- 프로필 사진 -->
    <LinearLayout
        android:id="@+id/img_profile_container"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="39dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:src="@drawable/none_my_profile"
            android:layout_marginBottom="8dp"
            android:layout_width="86dp"
            android:layout_height="86dp" />
        <TextView
            android:id="@+id/text_edit"
            android:text="@string/edit"
            android:textColor="@color/little_dark_gray"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- 기본정보 -->
    <TextView
        android:text="@string/profile_info"
        android:textSize="13sp"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:background="@color/gray"
        android:gravity="start|center_vertical"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="29dp" />
    <LinearLayout
        android:id="@+id/edit_name_container"
        android:orientation="horizontal"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/name"
            android:textSize="15sp"
            android:gravity="start"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="19dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edit_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@null"
            android:singleLine="true"
            android:maxLength="10"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <LinearLayout
        android:id="@+id/edit_location_container"
        android:orientation="horizontal"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/location"
            android:textSize="15sp"
            android:gravity="start"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="31dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/edit_location"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <!-- 정보관리 -->
    <TextView
        android:text="@string/profile_info_manage"
        android:textSize="13sp"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:background="@color/gray"
        android:gravity="start|center_vertical"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="29dp" />
    <RelativeLayout
        android:id="@+id/leave_profile_container"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/profile_signout"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:src="@drawable/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


</LinearLayout>
