<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/dark_transparent_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size">
        <TextView
            android:text="@string/setting_title"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <!-- 푸시 알림 설정 -->
    <TextView
        android:text="@string/push_setting_title"
        android:textSize="13sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/little_light_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <!-- 댓글알림 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/push_setting"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Switch
            android:id="@+id/switch_comment"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- 일반 -->
    <TextView
        android:text="@string/normal_setting"
        android:textSize="13sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/little_light_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!--&lt;!&ndash; 카메라롤에 사진 저장 &ndash;&gt;
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/save_gallery_setting"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Switch
            android:id="@+id/save_gallery_switch"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />-->

    <!-- 프로그램 정보 -->
    <RelativeLayout
        android:id="@+id/program_info_container"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/program_info_setting"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:src="@drawable/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- 위치 정보 사용 -->
    <RelativeLayout
        android:id="@+id/gps_setting_container"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/gps_setting"
            android:textSize="15sp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ToggleButton
            android:id="@+id/toggle_gps"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:textSize="15sp"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <ImageView
            android:src="@drawable/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" />
    </RelativeLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
</LinearLayout>