<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_profile"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"/>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom">
            <TextView
                android:id="@+id/text_my_name"
                android:text="@string/name"
                android:textSize="30sp"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_my_location"
                android:text="@string/location"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:paddingLeft="10dp"
        android:paddingTop="50dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/text_my_post"
            android:text="@string/my_post"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_signed_mongsil"
                android:text="@string/signed_mongsil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/text_signed_mongsil_num"
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <!-- recyclerView 내용 : layout_mongsil_list.xml -->
        <ListView
            android:id="@+id/signed_mongsil_list"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_make_mongsil"
                android:text="@string/make_mongsil"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/shape_more_radius"
                android:drawableLeft="@mipmap/ic_launcher"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/text_invite_friend"
                android:text="@string/invite_friend"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/shape_more_radius"
                android:drawableLeft="@mipmap/ic_launcher"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:phoneNumber="true"
                android:paddingLeft="10dp"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>