<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/shape_white_radius"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <View
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"/>
        <TextView
            android:id="@+id/text_other_mongsil"
            android:text="@string/other_mongsil"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
        <View
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"/>
        <TextView
            android:id="@+id/text_modify"
            android:text="@string/post_modify"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
        <View
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"/>

        <TextView
            android:id="@+id/text_remove"
            android:text="@string/post_remove"
            android:textColor="@android:color/holo_red_light"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/text_close"
        android:text="@string/close"
        android:gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/shape_white_radius"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />

</LinearLayout>