<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/invisible"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/shape_white_radius"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2">
        <View
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"/>
        <Button
            android:id="@+id/btn_first"
            android:text="@string/capture"
            android:textColor="#DB2E2F"
            android:textSize="16sp"
            android:background="@color/invisible"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
        <View
            android:background="@color/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btn_second"
            android:text="@string/select_gallery"
            android:textColor="#2B5B99"
            android:textSize="16sp"
            android:background="@color/invisible"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/shape_white_radius"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_close"
            android:text="@string/close"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>